loro/test/invalid/ciclicidad-objeto.loro
objeto cicl extiende cicl
	descripción ""
fin objeto
